# BitSync

./: .gitignore  .gitmodules  Cargo.toml  Makefile  build.rs  build_html.nu  dev.env  docker-compose.yml  make_templates.nu  reset.css
.sqlx/: query-0328176ec0c66942bf7c518fe10dd928cbe3fcb229c34e3d14b5e892822da4c7.json  query-0bf03b4cdd9775c7465a88773597d79c03dc9d71ae00273a268a802635183d39.json  query-0f65c665d1134dc5484977610863f519fbc512e8552ffd22f3a005c69b654f0c.json  query-1360135b6241e2fa72f6126c86acc46a6958ea500e826b57fc13d5498e6d37e5.json  query-200f77407f56567cdc4cb7fd8dd52e9c5e239028a369fdd39e6e851d659b8a10.json  query-23d9f091fc1a1b25fb1491b605ad49343c22f3119a249fec855703e94ffd2455.json  query-250a65661ce294c46dfcfc5fd2a2affbb0ff3d8d807a653a7f182b75d6c2dcb8.json  query-34985d5ce26a2bbb375a8470bd4396b99d9c285028efa80dc2f21b997389de31.json  query-57c01feda4db7ec4ff9510d64588cf1369606af0ed4634bbd64112d82ed2219f.json  query-8dd254cc6906ac6609c01d4181812b8dd7f63565549a2c3b3e2a9158c78f09fa.json  query-96f1be91851c6d3f7abe6b305010a321a47eeae1aa61b7fbbfdd6b94b5104b16.json  query-9cc53213ffd0ff389b8863e538da8f57bce2d87fe26754a5aa8877d8c85684c6.json  query-9fd8aaf4278746a51f19a4be3dcdddc086080bc121f9171eb049183bc337420c.json  query-b2a29c23a545bfa898965679dc1c188da835c6d2ca737a49b5b5c66004bfdb42.json  query-bba42e508b17416e5521db661f3cea07609648ab3324756ff9cecb303bd7bb2e.json  query-cc5c318fde77d60717bc8ae63f51c569174c9b5d04d1b380c9356a27a8a55668.json  query-d3e45be1e3c78dbc80b0abf1e5519fe5cbb09472d7211481bc46e541037f2b21.json  query-d6b284ac6ffd54d7ffea4a96957a1d8fd732c063e81376d06abd24dd72744b09.json  query-d753d540aab6c44ee62659fda6301a6e62be9e5b04043ef9c2759eddf5713b0b.json  query-f8c28e5efcf8b84b49471f494f69351f7f482c0bb8595d0df12c1ba36541e5f8.json
bitsync-core/: Cargo.toml
bitsync-core/src/: config.rs  database.rs  handler.rs  hash.rs  helper_macro.rs  jwt.rs  lib.rs  random.rs  storage.rs  totp.rs  use_case.rs  validate.rs  validation.rs
bitsync-core/src/database/: user.rs
bitsync-core/src/handler/api/graphql/: schema.rs
bitsync-core/src/handler/api/graphql/schema/: private.rs
bitsync-core/src/handler/api/graphql/schema/private/: object.rs
bitsync-core/src/handler/api/graphql/schema/private/mutation/use_case/: user_settings.rs
bitsync-core/src/handler/api/graphql/schema/private/query/use_case/: user_files.rs
bitsync-core/src/handler/api/graphql/schema/public/: mutation.rs  query.rs
bitsync-core/src/storage/: fs_storage.rs
bitsync-core/src/totp/: recovery_code.rs
bitsync-core/src/use_case/: auth.rs  dir_item.rs  initialization.rs  invite_token.rs  login.rs  register.rs  user.rs  user_files.rs  user_settings.rs  user_share.rs
bitsync-core/src/use_case/auth/: ensure_admin_bootstrap.rs  initiate_totp_setup.rs  login.rs  logout.rs  prepare_totp_setup.rs  redeem_invite_token.rs  registration.rs  reset_totp.rs  resolve_session.rs  retrieve_totp_setup_data.rs  setup_totp.rs  verify_totp.rs
bitsync-core/src/use_case/invite_token/: create_invite_token.rs  delete_invite_token.rs  list_invite_tokens.rs
bitsync-core/src/use_case/user/: delete_user.rs  get_user.rs  list_users.rs  make_admin.rs  reset_user_totp.rs  revoke_admin.rs  suspend_user.rs  unsuspend_user.rs
bitsync-core/src/use_case/user_files/: create_directory.rs  delete_user_file.rs  download_user_file.rs  move_user_file.rs  read_user_directory_contents.rs  read_user_file_item.rs  search_user_files.rs  shared.rs  upload_user_file.rs
bitsync-core/src/use_case/user_files/download_user_file/: directory_zipping.rs
bitsync-core/src/use_case/user_settings/: list_sessions.rs  read_user_settings.rs  retrieve_totp_setup_data.rs  setup_totp.rs  terminate_all_other_sessions.rs  terminate_session.rs  update_user_password.rs
bitsync-core/src/use_case/user_share/: create_user_share.rs  delete_all_user_shares.rs  delete_user_share.rs  list_shared_paths.rs  list_user_shares.rs
bitsync-database/: Cargo.toml
bitsync-frontend/: Cargo.toml  build.rs
bitsync-frontend/scss-shared/: dialog.scss  vars.scss
bitsync-frontend/scss-vars/: vars.scss
bitsync-frontend/src/: api.rs  confirmation_dialog.rs  error_banner.rs  error_card.rs  error_modal.rs  global_storage.rs  htmx.rs  icons.rs  lib.rs  main.rs  models.rs  pages.rs  styles.rs  toast.rs  totp.rs
bitsync-frontend/src/api/: http.rs  private.rs
bitsync-frontend/src/api/http/: request.rs  response.rs
bitsync-frontend/src/api/private/: mutation.rs  query.rs
bitsync-frontend/src/api/private/mutation/: upload_files.rs
bitsync-frontend/src/api/public/: query.rs
bitsync-frontend/src/components/: user_settings.rs
bitsync-frontend/src/components/user_settings/: password.rs  sessions.rs  shares.rs  totp.rs  users.rs
bitsync-frontend/src/components/user_settings/shares/: file_share.rs
bitsync-frontend/src/icons/: bolt.rs  check.rs  chevron_left.rs  chevron_right.rs  circle_x.rs  cloudy.rs  ellipsis_vertical.rs  file_text.rs  folder.rs  folder_plus.rs  link.rs  log_out.rs  logo.rs  menu.rs  plus.rs  search.rs  upload.rs  x.rs
bitsync-frontend/src/pages/: base.rs  error.rs  files.rs  login.rs  register.rs  search.rs  suspended.rs  totp_setup.rs  user_settings.rs
bitsync-frontend/src/pages/files/: directory_creation.rs  file_move.rs  file_operations.rs  file_share.rs
bitsync-frontend/src/pages/user_settings/: invites.rs  password.rs  sessions.rs  shares.rs  totp.rs  users.rs
bitsync-hyperstim/: Cargo.toml
bitsync-jwt/: Cargo.toml
bitsync-routes/: Cargo.toml
bitsync-server/: Cargo.toml  build.rs
bitsync-server/src/: auth.rs  handler.rs  helper_macro.rs  lib.rs  main.rs
bitsync-storage/: Cargo.toml
env/: .luarc.json  arc.lua  helpers.lua  types.lua
jwt/: Cargo.toml
migrations/: 20231207131332_create-user.sql
scripts/: make_fetch_static_assets.nu  make_font_css.nu  make_templates.nu
scss/: auth_page.scss  badge.scss  base.scss  button.scss  context_menu.scss  empty_state.scss  error_banner.scss  error_card.scss  error_modal.scss  files_home.scss  files_home_page.scss  login_page.scss  modal.scss  register.scss  toast.scss  (+4 more)
(+150 files in other folders)
