[package]
name = "bitsync"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
argon2 = { version = "0.5.2", features = ["std"] }
askama = "0.12.1"
async-recursion = "1.0.5"
async-trait = "0.1.74"
async_zip = { version = "0.0.17", features = ["tokio"] }
axum = { version = "0.7.2", features = ["http2"] }
axum-extra = { version = "0.9.0", features = ["typed-header", "form", "cookie", "typed-routing", "async-read-body", "attachment"] }
bytes = "1.6.0"
color-eyre = "0.6.2"
dotenv = "0.15.0"
futures = "0.3.30"
headers = "0.4.0"
iftree = "1.0.5"
jsonwebtoken = "9.2.0"
mime_guess = "2.0.5"
nucleo-matcher = "0.3.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-env = "0.1.1"
size = "0.4.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "time", "uuid", "postgres"] }
thiserror = "1.0.51"
time = { version = "0.3.30", features = ["serde-human-readable"] }
tokio = { version = "1.34.0", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["io"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
turf = "0.9.3"
uuid = { version = "1.6.1", features = ["serde"] }

[patch.crates-io]
axum-extra = { git = "https://github.com/tokio-rs/axum.git", rev = "52ae7bb904cc374ad0acdc08ae03760a71d95ac2" }
axum = { git = "https://github.com/tokio-rs/axum.git", rev = "52ae7bb904cc374ad0acdc08ae03760a71d95ac2" }
