[workspace]
members = [
    "bitsync-core", "bitsync-database", "bitsync-frontend", "bitsync-routes", "bitsync-storage",
]

[workspace.dependencies]
axum = "0.7.9"
axum-extra = "0.9.6"
bitsync-core.path = "bitsync-core"
bitsync-database.path = "bitsync-database"
bitsync-frontend.path = "bitsync-frontend"
bitsync-routes.path = "bitsync-routes"
bitsync-storage.path = "bitsync-storage"
bytes = "1.6.0"
futures = "0.3.30"
mime_guess = "2.0.5"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.34.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["io"] }
thiserror = "1.0.51"
tracing = "0.1.40"
uuid = { version = "1.6.1", features = ["serde"] }

[package]
name = "bitsync"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
async-trait = "0.1.74"
axum = { workspace = true, features = ["http2"] }
axum-extra = { workspace = true, features = ["typed-header", "form", "cookie", "typed-routing", "async-read-body", "attachment", "multipart"] }
axum-htmx = "0.6.0"
bitsync-core.workspace = true
bitsync-database.workspace = true
bitsync-frontend.workspace = true
bitsync-routes.workspace = true
bitsync-storage.workspace = true
bytes.workspace = true
color-eyre = "0.6.2"
dotenv = "0.15.0"
headers = "0.4.0"
iftree = "1.0.5"
mime_guess.workspace = true
nucleo-matcher = "0.3.0"
serde.workspace = true
serde-env = "0.2.0"
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3.30", features = ["serde-human-readable"] }
tokio.workspace = true
tokio-util.workspace = true
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.0", features = ["trace", "cors", "limit"] }
tracing.workspace = true
tracing-subscriber = "0.3.18"
turf = "0.9.3"
uuid.workspace = true
