[package]
name = "bitsync-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.2", features = ["std"] }
async-recursion = "1.0.5"
color-eyre = "0.6.2"
bitsync-jwt = { path = "../bitsync-jwt" }
dotenv = "0.15.0"
nucleo-matcher = "0.3.0"
serde.workspace = true
serde-env = "0.1.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "time", "uuid", "postgres"] }
thiserror.workspace = true
time = { version = "0.3.30", features = ["serde-human-readable"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid.workspace = true
