[package]
name = "bitsync-frontend"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["color"] }
cynic = "3.4.3"
gloo-net = "0.5.0"
bitsync-jwt = { path = "../bitsync-jwt" }
leptos = { version = "0.6.3", features = ["csr", "tracing"] }
leptos-use = { version = "0.10.2", features = ["serde"] }
leptos_router = { version = "0.6.3", features = ["csr"] }
serde.workspace = true
serde_json = "1.0.113"
thiserror.workspace = true
tracing = { version = "0.1.40", features = ["log"] }
turf = "0.7.1"
uuid.workspace = true
web-sys = "0.3.68"
material-colors = "0.1.6"

[build-dependencies]
bitsync = { path = "../" }
cynic-codegen = "3.4.3"
