[package]
name = "bitsync-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
bitsync-core.workspace = true
bitsync-database.workspace = true
bitsync-routes.workspace = true
bitsync-storage.workspace = true
hypertext = "0.12.1"
serde_json.workspace = true
size = "0.4.1"
time.workspace = true
turf = "0.10.0"
uuid.workspace = true

[package.metadata.turf]
load_paths = ["scss-shared"]
browser_targets = ["defaults"]
class_names.template = "<original_name>-<id>"
