[package]
name = "bitsync-server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
color-eyre = "0.6.2"
bitsync-core = { path = "../bitsync-core" }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
bitsync-core = { path = "../bitsync-core" }
