[package]
name = "bitsync-server"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["typed-header"] }
bitsync-core = { path = "../bitsync-core" }
bitsync-jwt = { path = "../bitsync-jwt" }
color-eyre = "0.6.2"
serde.workspace = true
thiserror.workspace = true
tokio = { version = "1.34.0", features = ["full"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
bitsync-core = { path = "../bitsync-core" }
